added pictures and font

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <meta name="viewport" content="width=device-width">
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
-
+  <link href='http://fonts.googleapis.com/css?family=Monsieur+La+Doulaise&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="nerdnuendo.css">
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
@@ -36,10 +37,12 @@
   <header>
 
   </header>
-  <div role="main" class="everything">
-    Hello Word!
-
+  <div role="main" class="quote">
+         "I want to Facebook your Twitter til your stack overflows."
   </div>
+  <div class="background">
+ </div>
+    
   <footer>
 
   </footer>
